# dunce

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
crates/dcap/: Cargo.toml
crates/dcap/src/: lib.rs
crates/dcap/src/stream/: inspector.rs  mod.rs  sink.rs  source.rs  testing.rs
crates/dcap/src/stream/storage/: file.rs  handle.rs  memory.rs  mod.rs
