[workspace]

members = ["crates/dcap"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5.31", features = ["derive"] }
futures = "0.3.31"
futures-util = { version = "0.3.31", features = ["sink"] }
lazy_static = "1.5"
log = "0.4"
rand = "0.8.5"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12.0"
thiserror = "1.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }


dcap = { path = "crates/dcap" }
